Update CUDA compilation to the current version of cmake, CUDA is directly supported as a language

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 #The name of the project
-project(parallelFDTD)
+project(parallelFDTD CXX CUDA)
 
 
 # These compiler options are needed for compatibility with the Anaconda
@@ -21,6 +21,7 @@ if(NOT VOXELIZER_ROOT)
     GIT_REPOSITORY https://github.com/AaltoRSE/Voxelizer.git
     CMAKE_ARGS "-DCUDA_GENCODE=${CUDA_GENCODE}"
   )
+  set( BUILD_VOXELIZER on )
   set( VOXELIZER_ROOT ${CMAKE_CURRENT_BINARY_DIR}/Voxelizer-prefix/src/Voxelizer )
   set( VOXELIZER_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/Voxelizer-prefix/src/ )
   set( VOXELIZER_LIB_PATH ${CMAKE_CURRENT_BINARY_DIR}/Voxelizer-prefix/src/Voxelizer-build/lib/ )
@@ -57,15 +58,6 @@ if(NOT "$ENV{CONDA_PREFIX}" STREQUAL "")
   set( Boost_NO_SYSTEM_PATHS ON )
   set( Python_FIND_VIRTUALENV ONLY)
 endif()
-
-# Find CUDA and Python libraries
-find_package( CUDA REQUIRED )
-
-# if building for python2, enable python bindings
-if(BUILD_PYTHON2)
-  set( BUILD_PYTHON on)
-endif()
-
 
 
 # Find python and python libraries
@@ -145,28 +137,15 @@ endif()
 
 # Set CUDA architecture
 if(CUDA_GENCODE)
-  set( CUDA_NVCC_FLAGS_RELEASE ${CUDA_NVCC_FLAGS_RELEASE};
-                            -gencode ${CUDA_GENCODE}
-                          )
-
-  set( CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG};
-                            -gencode ${CUDA_GENCODE}
-                          )
+  set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -gencode ${CUDA_GENCODE}")
 else()
-  set( CUDA_NVCC_FLAGS_RELEASE ${CUDA_NVCC_FLAGS_RELEASE};
-                         -gencode arch=compute_60,code=sm_70
-                         -gencode arch=compute_61,code=sm_61
-                         -gencode arch=compute_60,code=sm_60
-                         -gencode arch=compute_52,code=sm_52
-                         -gencode arch=compute_37,code=sm_37
-                         )
-  set( CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG};
-                        -gencode arch=compute_60,code=sm_70
-                         -gencode arch=compute_61,code=sm_61
-                         -gencode arch=compute_60,code=sm_60
-                         -gencode arch=compute_52,code=sm_52
-                         -gencode arch=compute_37,code=sm_37
-                         )
+  set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} \
+    -gencode arch=compute_60,code=sm_70 \
+    -gencode arch=compute_61,code=sm_61 \
+    -gencode arch=compute_60,code=sm_60 \
+    -gencode arch=compute_52,code=sm_52 \
+    -gencode arch=compute_37,code=sm_37"
+  )
 endif()
 
 
