Conda environment for cross building

--- a/conda_environment_with_cuda.yml
+++ b/conda_environment_with_cuda.yml
@@ -5,7 +5,9 @@ dependencies:
   - boost
   - py-boost
   - cmake
-  - cudatoolkit=11
+  - cudatoolkit
+  - cudnn
   - cudatoolkit-dev
   - freeglut
   - glew
+  - mesalib
