--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,11 +54,11 @@ set( Boost_USE_STATIC_RUNTIME OFF )
 if(NOT "$ENV{CONDA_PREFIX}" STREQUAL "")
   message( STATUS "CONDA_PREFIX $ENV{CONDA_PREFIX}")
   set( BOOST_ROOT C:/Program Files/boost_1_80_0)
-  set( Python_FIND_VIRTUALENV ONLY)
+  # set( Python_FIND_VIRTUALENV ONLY)
 endif()
 set( BOOST_ROOT C:/ProgramData/Anaconda3/envs/opti-acoustics/library/include)
 set( Boost_INCLUDE_DIR C:/ProgramData/Anaconda3/envs/opti-acoustics/library/include)
-set( Boost_LIBRARY_DIR C:/ProgramData/Anaconda3/envs/opti-acoustics/library/bin)
+set( Boost_LIBRARY_DIR C:/ProgramData/Anaconda3/envs/opti-acoustics/library)
 
 # Find python and python libraries
 find_package( Python REQUIRED)
