--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ set( Boost_USE_STATIC_RUNTIME OFF )
 if(NOT "$ENV{CONDA_PREFIX}" STREQUAL "")
   message( STATUS "CONDA_PREFIX $ENV{CONDA_PREFIX}")
   set( BOOST_ROOT C:/Program Files/boost_1_80_0)
+  set( Boost_NO_SYSTEM_PATHS ON )
   set( Python_FIND_VIRTUALENV ONLY)
 endif()
 set( BOOST_ROOT C:/ProgramData/Anaconda3/envs/opti-acoustics/library/include)
